[tool.poetry]
name = "isda-cds-pricer"
version = "1.0.0"
description = "Pure Python implementation of the ISDA CDS Standard Model"
authors = ["CDS Pricer"]
license = "MIT"
readme = "README.md"
packages = [{include = "isda", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
scipy = "^1.10.0"
opendate = "^0.1.37"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
